compiler/testData/integration/smoke/syntaxErrors/test.compile.expected

ERR:
test.kt:4:20: error: expecting an element
    val s = System.in
                   ^

Return code: 1
